<resources>
    <string name="app_name">Address Collector</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="building_no">Building Number</string>
    <string name="street_name">Street Name</string>
    <string name="sub_city">Sub City</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="gndivision">GN Division</string>

    <string name="submit">Submit</string>

    <string-array name="address_categories">
        <item>Residential</item>
        <item>Business</item>
    </string-array>
</resources>
