<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_data_collector"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lk.org.opendata.addresscollector.DataCollector">

    <EditText
        android:id="@+id/buildingNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/building_no"
        android:inputType="text|number" />

    <EditText
        android:id="@+id/streetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/buildingNo"
        android:layout_below="@+id/buildingNo"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/street_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/postalCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/city"
        android:layout_below="@+id/city"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/postal_code"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/gndivision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/postalCode"
        android:layout_below="@+id/postalCode"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/gndivision"
        android:inputType="text" />

    <Spinner
        android:id="@+id/addresCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/gndivision"
        android:layout_below="@+id/gndivision"
        android:layout_marginTop="24dp"
        android:entries="@array/address_categories" />

    <EditText
        android:id="@+id/subCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/streetName"
        android:layout_below="@+id/streetName"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/sub_city"
        android:inputType="text" />

    <EditText
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/subCity"
        android:layout_below="@+id/subCity"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="text" />

    <Button
        android:id="@+id/submit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:text="@string/submit" />
</RelativeLayout>
